# github_stars

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  classify_github_stars.py  github_stars_apply_lists.js  github_stars_audit_lists.js  package.json  pyproject.toml
config/: categories.example.yaml  config.example.yaml
docs/: github_limits.md  runbook.md
examples/manual/: classification.manual.example.csv  classification.manual.example.json
scripts/: bootstrap.ps1  bootstrap.sh  menu.ps1  run_audit.ps1  run_classify.ps1  run_export.ps1  run_import.ps1  run_sync.ps1  stars.ps1  stars.sh
src/: export_stars_browser.js
src/github_stars_tool/: cli.py  config.py  exporter.py  llm_classifier.py
